# root

./: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.rej  Makefile  configure
bindings/r/inc/: TRInterface.h
bindings/r/src/: TRInterface.cxx
config/: Makefile.depend  Makefile.in  Makefile.linux  Makefile.linuxx8664gcc  Makefile.linuxx8664icc  Makefile.macosx  Makefile.macosx64
core/base/src/: RGitCommit.h.tmp
documentation/users-guide/: FittingHistograms.md  MathLibraries.md
etc/plugins/ROOT@@Math@@Minimizer/: P090_LVMiniMinimizer.C
gui/fitpanel/inc/: TFitEditor.h
gui/fitpanel/src/: CommonDefs.h  TFitEditor.cxx
hist/hist/inc/: LinkDef.h  TF1.h  TF1Convolution.h  TF1NormSum.h  TFormula.h
hist/hist/src/: AnalyticalIntegrals.cxx  AnalyticalIntegrals.h  HFitInterface.cxx  (+7 more)
math/: CMakeLists.txt
math/lvmini/: CMakeLists.txt  Module.mk
math/mathcore/: CMakeLists.txt  Module.mk
math/vc/examples/genvector/: CMakeLists.txt  Makefile  vectorOperation.cxx
math/vc/examples/smatrix/: CMakeLists.txt  Makefile  matrix_op_vec.h  testKalman.cxx  testOperations.cxx
random123/examples/: BUILDVC.BAT  time_opencl_kernel.i
rmva/: CMakeLists.txt
rmva/inc/: LinkDef.h
rmva/src/: MethodC50.cxx
root-v6-00.xcworkspace/xcshareddata/: root-v6-00.xccheckout
test/: Makefile
tmva/: CMakeLists.txt
tmva/doc/: LICENSE
tmva/rmva/: CMakeLists.txt
tmva/src/: MethodANNBase.cxx
tmva/tmva/: CMakeLists.txt
tutorials/fit/: CrystalBall.c  TestAnalyticalIntegrals.C  TestConv.cpp  TestFit.cpp  fitNormSum.cpp  minuit2GausFit.C
tutorials/math/: testrandom.C
(+128 files in other folders)
